--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
-/node_modules
-app/node_modules
-app/dist
-app/.vite
-app/.env
-app/**/*.tsbuildinfo
-.DS_Store
-**/.DS_Store
-.sui
+##############################################
+# Root ignore (app/ は app/.gitignore に委譲)
+##############################################
+
+# Package managers / caches
+/.pnpm-store/
+/node_modules/
+
+# Logs
 *.log
-.pnpm-store/
+logs
+
+# OS junk
+**/.DS_Store
+Thumbs.db
+
+# Chain tool (Sui CLI)
+.sui/
